<resources>
    <string name="app_name">slooz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="first" />
    <string name="second" />

    <string name="akama_go">Akama\ngo</string>
    <string name="akama_up">Akama\nup</string>
    <string name="akama_plus">Akama\nplus</string>
    <string name="be_500">Be\n500</string>
    <string name="be_1000">Be\n1000</string>

    <string name="tsik_jiaby">Tsik\'\njiaby</string>
    <string name="tsik_iray">Tsik\'\niray</string>
    <string name="tsik_roa">Tsik\'\nroa</string>
    <string name="tsik_dimy">Tsik\'\ndimy</string>
    <string name="tsik_max">Tsik\'\nmax</string>

    <string name="mlay_200">M\'Lay\n200</string>
    <string name="mlay_500">M\'Lay\n500</string>
    <string name="mlay_1000">M\'Lay\n1000</string>
    <string name="facebook_mlay">Boost</string>
    <string name="sms_mlay">SMS\nM\'Lay\n1000</string>

    <string name="mora_500">M\'ora\n500</string>
    <string name="mora_one">M\'ora\n1000</string>
    <string name="yellow_100">Yellow\n100</string>
    <string name="net_one_week">Net\nOne Week</string>
    <string name="net_one_month">Net\nOne Week</string>

    <string name="extra_data">Extra\ndata\n10Go</string>
    <string name="first_premium">First\npremium</string>
    <string name="net_mlay_199000">Dépannage</string>
    <string name="be_connect_10go">Be\nconnect\n10Go</string>
    <string name="autres">Autres</string>

    <string name="slogan_app_top">origin</string>
    <string name="slogan_app_bottom">axaNd</string>

    <string name="exit_dialog_title">Quitter ?</string>
    <string name="positive_btn_exit_dialog">Oui</string>
    <string name="negative_btn_exit_dialog">Non</string>

    <string name="stay_in">Stay\'\nin</string>
    <string name="fb_mix">Facebook\nMix</string>
    <string name="faceboobaka">Face\nboobaka</string>
    <string name="extra_sms">Extra\nSMS</string>
    <string name="mon_taxi">Mon\ntaxi</string>
</resources>
