<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_container"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_marginRight="2pt">

    <Button
        android:id="@+id/view_third_slide_a_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/mlay_200"
        android:background="@drawable/btn_11"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/view_third_slide_b_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        tools:ignore="Suspicious0dp"
        android:text="@string/mlay_500"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_12"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/view_third_slide_c_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/mlay_1000"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_13"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/view_third_slide_d_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/facebook_mlay"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_14"
        android:textSize="8sp"/>

    <Button
        android:id="@+id/view_third_slide_e_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/sms_mlay"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_15"
        android:textSize="10sp"/>

</LinearLayout>


