<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_marginRight="2pt">

    <Button
        android:id="@+id/view_first_slide_a_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/extra_data"
        android:background="@drawable/btn_21"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:textSize="8sp"/>

    <Button
        android:id="@+id/view_first_slide_b_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        tools:ignore="Suspicious0dp"
        android:text="@string/first_premium"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_22"
        android:textSize="8sp"/>

    <Button
        android:id="@+id/view_first_slide_c_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/net_mlay_199000"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_23"
        android:textSize="8sp"/>

    <Button
        android:id="@+id/view_first_slide_d_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/be_connect_10go"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_24"
        android:textSize="8sp"/>

    <Button
        android:id="@+id/view_first_slide_e_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/autres"
        tools:ignore="Suspicious0dp"
        android:textAlignment="center"
        android:background="@drawable/btn_25"
        android:textSize="8sp"/>

</LinearLayout>


